--- a/2_scripts/01_1_preprocessing.ipynb
+++ b/2_scripts/01_1_preprocessing.ipynb
@@ -748,6 +748,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "4bb334f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#change all above to just WB"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 39,
    "id": "5cb016c6",
    "metadata": {},
