updates_pre_CSTM

--- a/2_scripts/01_1_preprocessing (SANBS).ipynb
+++ b/2_scripts/01_1_preprocessing (SANBS).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "id": "1e58b34f",
    "metadata": {},
    "outputs": [
@@ -10,11 +10,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\hjagirdar\\AppData\\Local\\Temp\\ipykernel_9004\\4011481925.py:11: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
+      "C:\\Users\\hjagirdar\\AppData\\Local\\Temp\\ipykernel_14724\\4011481925.py:11: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
       "\n",
       "\n",
       "  df=pd.read_csv(\"../1_data/private/SANBSdata.csv\", error_bad_lines=False)\n",
-      "C:\\Users\\hjagirdar\\AppData\\Local\\Temp\\ipykernel_9004\\4011481925.py:11: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\hjagirdar\\AppData\\Local\\Temp\\ipykernel_14724\\4011481925.py:11: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df=pd.read_csv(\"../1_data/private/SANBSdata.csv\", error_bad_lines=False)\n"
      ]
     }
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "id": "c651ca81",
    "metadata": {},
    "outputs": [
@@ -249,7 +249,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "id": "31309d6b",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\hjagirdar\\AppData\\Local\\Temp\\ipykernel_9004\\4182776018.py:5: DtypeWarning: Columns (17) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\hjagirdar\\AppData\\Local\\Temp\\ipykernel_14724\\4182776018.py:5: DtypeWarning: Columns (17) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  don_hist=pd.read_csv(\"../1_data/private/don_hist.csv\")\n"
      ]
     },
@@ -486,7 +486,7 @@
        "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "id": "efb5add5",
    "metadata": {},
    "outputs": [
@@ -520,7 +520,7 @@
        "Name: OUTCOME_TYPE, dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "id": "96b8658a",
    "metadata": {},
    "outputs": [],
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "id": "d900c16f",
    "metadata": {
     "scrolled": false
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "id": "86369fcc",
    "metadata": {
     "scrolled": true
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "id": "ca5b81c4",
    "metadata": {},
    "outputs": [
@@ -731,7 +731,7 @@
        "Name: donation_product_x, dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,17 +748,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "4bb334f8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#change all above to just WB"
+    "#change all above to just WB\n",
+    "df.loc[(df['donation_product_x'] == 'WB')|\n",
+    "           (df['donation_product_x'] == 'WBSB')| (df['donation_product_x'] == 'WBMED')| (df['donation_product_x'] == 'WBDISC')\n",
+    "           |( df['donation_product_x'] == 'WBOB') |(df['donation_product_x'] == 'WBDP') | (df['donation_product_x'] == 'WBD'),\n",
+    "           'donation_product_x']='WB'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 25,
    "id": "5cb016c6",
    "metadata": {},
    "outputs": [],
@@ -769,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "id": "26ac073d",
    "metadata": {},
    "outputs": [],
@@ -784,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 27,
    "id": "7c4c7324",
    "metadata": {},
    "outputs": [],
@@ -796,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 28,
    "id": "2b1a8980",
    "metadata": {},
    "outputs": [
@@ -806,7 +810,7 @@
        "0"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -834,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 29,
    "id": "185fb6e8",
    "metadata": {},
    "outputs": [
@@ -844,7 +848,7 @@
        "0"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 30,
    "id": "4af63afc",
    "metadata": {},
    "outputs": [],
@@ -881,6 +885,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b47fc405",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83f9bce0",
    "metadata": {},
    "outputs": [],
    "source": []
